# GPT-SoVITS-Emotion-Manager

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_inferer.py  run_tagger.py
outputs/: all_edited_list_formatted_filtered_emotion_annotation.json  parsed_001・アーサー王ver1.07_emotion_annotation.json
src/gpt_sovits_emotion_manager/: __init__.py  api.py  config.py  inference.py  log.py  models.py  tagger.py  utils.py
